@@ -31,25 +31,22 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.regex.Pattern;
 
-import jdk.vm.ci.runtime.JVMCI;
 import org.graalvm.compiler.options.OptionType;
 
 import com.oracle.svm.driver.MacroOption.MacroOptionKind;
 import com.oracle.svm.driver.NativeImage.ArgumentQueue;
-
-import jdk.vm.ci.aarch64.AArch64;
-import jdk.vm.ci.amd64.AMD64;
-import jdk.vm.ci.code.Architecture;
 
 class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
 
     private static final String verboseOption = "--verbose";
     private static final String requireValidJarFileMessage = "-jar requires a valid jarfile";
     private static final String newStyleClasspathOptionName = "--class-path";
+
+    private static final String addModulesOption = "--add-modules";
+    private static final String addModulesErrorMessage = " requires modules to be specified";
 
     static final String helpText = NativeImage.getResource("/Help.txt");
     static final String helpExtraText = NativeImage.getResource("/HelpExtra.txt");
@@ -145,6 +142,19 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 nativeImage.addPlainImageBuilderArg(nativeImage.oHModule + mainClassModuleArgParts[0]);
                 nativeImage.setModuleOptionMode(true);
                 return true;
+            case addModulesOption:
+                args.poll();
+                String addModulesArgs = args.poll();
+                if (addModulesArgs == null) {
+                    NativeImage.showError(headArg + addModulesErrorMessage);
+                }
+                if (nativeImage.config.useJavaModules()) {
+                    nativeImage.addImageBuilderJavaArgs(addModulesOption, addModulesArgs);
+                    nativeImage.addAddedModules(addModulesArgs);
+                } else {
+                    NativeImage.showWarning("Ignoring unsupported module option: " + addModulesOption + " " + addModulesArgs);
+                }
+                return true;
             case "--configurations-path":
                 args.poll();
                 String configPath = args.poll();
@@ -208,21 +218,6 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                 nativeImage.addPlainImageBuilderArg("-H:+DiagnosticsMode");
                 nativeImage.addPlainImageBuilderArg("-H:DiagnosticsDir=" + nativeImage.diagnosticsDir);
                 System.out.println("# Diagnostics mode enabled: image-build reports are saved to " + nativeImage.diagnosticsDir);
-                return true;
-            case "--list-cpu-features":
-                args.poll();
-                Architecture arch = JVMCI.getRuntime().getHostJVMCIBackend().getTarget().arch;
-                if (arch instanceof AMD64) {
-                    nativeImage.showMessage("All AMD64 CPUFeatures: " + Arrays.toString(AMD64.CPUFeature.values()));
-                    nativeImage.showNewline();
-                    nativeImage.showMessage("Host machine AMD64 CPUFeatures: " + ((AMD64) arch).getFeatures().toString());
-                } else {
-                    nativeImage.showMessage("All AArch64 CPUFeatures: " + Arrays.toString(AArch64.CPUFeature.values()));
-                    nativeImage.showNewline();
-                    nativeImage.showMessage("Host machine AArch64 CPUFeatures: " + ((AArch64) arch).getFeatures().toString());
-                }
-                nativeImage.showNewline();
-                System.exit(0);
                 return true;
             case "--disable-@files":
                 args.poll();
@@ -311,6 +306,20 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
                  * behaviour for proper backward compatibility.
                  */
                 System.exit(0);
+            }
+            return true;
+        }
+        if (headArg.startsWith(addModulesOption + "=")) {
+            args.poll();
+            String addModulesArgs = headArg.substring(addModulesOption.length() + 1);
+            if (addModulesArgs.isEmpty()) {
+                NativeImage.showError(headArg + addModulesErrorMessage);
+            }
+            if (nativeImage.config.useJavaModules()) {
+                nativeImage.addImageBuilderJavaArgs(addModulesOption, addModulesArgs);
+                nativeImage.addAddedModules(addModulesArgs);
+            } else {
+                NativeImage.showWarning("Ignoring unsupported module option: " + addModulesOption + " " + addModulesArgs);
             }
             return true;
         }
